@@ -11,15 +11,12 @@ import java.util.stream.Collectors;
 public class BaseController {
 
     protected Pageable getPageable(int pageNumber, int pageSize, String sortDirection, String... sort) {
-        Sort.Direction direction = sortDirection.equalsIgnoreCase("asc")
-                ? Sort.Direction.ASC : Sort.Direction.DESC;
-        List<Sort.Order> orders = new ArrayList<>();
-        Arrays.stream(sort).collect(Collectors.toList()).forEach(filed -> {
-            Sort.Order order = new Sort.Order(direction, filed);
-            orders.add(order);
-        });
+
+        Sort.Direction direction = Sort.Direction.fromString(sortDirection);
+        List<Sort.Order> orders = Arrays.stream(sort)
+                .map(field -> new Sort.Order(direction, field))
+                .toList();
         return PageRequest.of(pageNumber, pageSize, Sort.by(orders));
 
     }
-
 }
